fix image overflow

--- a/draftivist_ui/src/css/main.scss
+++ b/draftivist_ui/src/css/main.scss
@@ -155,6 +155,8 @@ p > a:hover {
 
 .imageWrapper {
   position: relative;
+  display: flex;
+  overflow: hidden;
 }
 
 .imageCredit {
